objects/AutoRABIT_POC__c.object
<CustomObject>
    <fields>
        <fullName>Abridged_Problem_Statement__c</fullName>
        <label>Abridged Problem Statement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frequent check-in to the repository to sync your Salesforce box with SCM branch on metadata changes, including deletions</fullName>
                </value>
                <value>
                    <fullName>Prevent Admins/Developers from overwriting their fellow user&apos;s metadata changes</fullName>
                </value>
                <value>
                    <fullName>Cherry-pick and deploy only delta differences within specific user stories. Dependent user stories can be pushed as well</fullName>
                </value>
                <value>
                    <fullName>Schedule deployments, code coverage and pre/post deployment steps</fullName>
                </value>
                <value>
                    <fullName>Migrate data records (w/ dependency across objects) from one Salesforce environment to another.</fullName>
                </value>
                <value>
                    <fullName>Achieve CI/CD using GUI for Salesforce DX - Create contextual scratch orgs and be able to version Unlocked Packages</fullName>
                </value>
                <value>
                    <fullName>Schedule pre/post deployment activities by running it with automated deployments</fullName>
                </value>
                <value>
                    <fullName>Achieve &quot;Daily Deployments&quot; with your VCS and ALM systems</fullName>
                </value>
                <value>
                    <fullName>Create, version and deploy nCino feature templates with dependencies. Also, version and migrate your Vlocity datapacks with dependencies</fullName>
                </value>
                <value>
                    <fullName>Managed Package: Metadata can be versioned in Source Control and data with dependencies can be migrated to Salesforce.</fullName>
                </value>
                <value>
                    <fullName>Understand who is deploying what changes to an environment. Commits and merges can also be tracked on a periodic basis.</fullName>
                </value>
                <value>
                    <fullName>Testing POC-Q2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_POC_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer POC Request</label>
        <referenceTo>Customer_POC_Request__c</referenceTo>
        <relationshipLabel>AutoRABIT POCs</relationshipLabel>
        <relationshipName>AutoRABIT_POCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q2_Demo__c</fullName>
        <label>Q2-Demo</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Cases_in_AutoRABIT__c</fullName>
        <label>Use Cases in AutoRABIT</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Abridged_Problem_Statement__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Code quality check</fullName>
                </value>
                <value>
                    <fullName>Constructive and Destructive changes can be packaged into one commit</fullName>
                </value>
                <value>
                    <fullName>Recurrent metadata check-ins</fullName>
                </value>
                <value>
                    <fullName>Salesforce users can collaborate on their metadata changes&quot;</fullName>
                </value>
                <value>
                    <fullName>Supports all conflict resolution types - Ours, Theirs, Recursive and Fast Forward</fullName>
                </value>
                <value>
                    <fullName>Validate/Test a user story prior to a push</fullName>
                </value>
                <value>
                    <fullName>Deploy specific work items (with dependencies) to higher environments that have passed testing</fullName>
                </value>
                <value>
                    <fullName>Leverage an existing build to re-deploy into other environments</fullName>
                </value>
                <value>
                    <fullName>Rollback the package either completely or selectively upon successful deployment</fullName>
                </value>
                <value>
                    <fullName>Delta Deployments for nested metadata components</fullName>
                </value>
                <value>
                    <fullName>Schedule deployments (daily, weekly, webhook-based) with pre/post deployment tasks</fullName>
                </value>
                <value>
                    <fullName>Automate Unit Tests by running code coverage only on dependent Test Classes</fullName>
                </value>
                <value>
                    <fullName>Tag work items during deployments</fullName>
                </value>
                <value>
                    <fullName>Run Pre/Post Destructive Changes during Rollback to avoid dependency errors</fullName>
                </value>
                <value>
                    <fullName>Dependent records across multiple objects can be migrated with no limit on #records</fullName>
                </value>
                <value>
                    <fullName>Sensitive records masked during migration</fullName>
                </value>
                <value>
                    <fullName>Supports Lookup, Master-Detail, Junction objects, Self References</fullName>
                </value>
                <value>
                    <fullName>Schedule Data Loads or Integrate with metadata deployment</fullName>
                </value>
                <value>
                    <fullName>Assists with preparation of logical metadata packages with depedencies</fullName>
                </value>
                <value>
                    <fullName>Supports creation of contextual Scratch orgs and Second Generation packaging (Unlocked Packages)</fullName>
                </value>
                <value>
                    <fullName>Completely driven by GUI</fullName>
                </value>
                <value>
                    <fullName>Creation of templates to support pre/post deployment activities</fullName>
                </value>
                <value>
                    <fullName>Templates can be run separately or tagged with CI Jobs</fullName>
                </value>
                <value>
                    <fullName>Out-of-Box Integrations with commonly used tools like JIRA, GIT, etc.</fullName>
                </value>
                <value>
                    <fullName>Help users achieve CD faster than any other release management platform</fullName>
                </value>
                <value>
                    <fullName>Create feature templates for nCino with dependencies across sObjects</fullName>
                </value>
                <value>
                    <fullName>Record the Metadata Configuration and nCino records in a branch</fullName>
                </value>
                <value>
                    <fullName>Deploy nCino templates (w/ dependencies) from either Salesforce Org or Version Control</fullName>
                </value>
                <value>
                    <fullName>Version and deploy Vlocity datapacks with dependencies to reduce deployment times</fullName>
                </value>
                <value>
                    <fullName>Visualize every day CI/CD operations and be able to generate reports on a daily/weekly/monthly basis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AutoRABIT POC</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Problem Statement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AutoRABIT POCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>